--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
   <h2>Leaflet 1.6.1</h2>
   <ol>
-    <li><a href="maps/leaflet/example1.html">Example 1, CDN host</a></li>
-    <li><a href="maps/leaflet/example2.html">Example 2, local host</a></li>
+    <li><a href="maps/leaflet/example1.html">Example 1, CDN host, OSM</a></li>
+    <li><a href="maps/leaflet/example2.html">Example 2, local host, OSM</a></li>
+    <li><a href="maps/leaflet/example3.html">Example 3, local host, Mapbox</a></li>
   </ol>
 
   <h2>Open Layers v6.1.1</h2>
