--- a/maps/leaflet/example1.html
+++ b/maps/leaflet/example1.html
@@ -43,7 +43,7 @@
     var map = L.map('map').setView([11.51120, 3.89827], 15)
 
     var marker = L.marker([11.51120, 3.89827]).addTo(map)
-    marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
+    marker.bindPopup("<b>Hello world!</b><br>I am at CBI Bastos.").openPopup();
 
     // Load basemap and required attribution
     L.tileLayer(
