--- a/maps/leaflet/example3.html
+++ b/maps/leaflet/example3.html
@@ -38,11 +38,12 @@
     var marker = L.marker([11.51120, 3.89827]).addTo(map)
     marker.bindPopup("<b>Hello world!</b><br>I am at CBI Bastos").openPopup();
 
-    // Load basemap and required attribution
-    L.tileLayer(
-      'https://a.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: 'Map data &copy; OpenStreetMap contributors'
-    }).addTo(map)
+    L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+      attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+      maxZoom: 18,
+      id: 'mapbox/streets-v11',
+      accessToken: 'pk.eyJ1Ijoic2NvdHRncnViZXIiLCJhIjoiY2szamxneDFiMGthZjNmbzM0MnM3emZrdCJ9.3h2KVTJgD22j3mIBZx7xMA'
+    }).addTo(map);
 
   </script>
 
