--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <h1>Web Maps</h1>
+  <h1>CBI Web Maps</h1>
 
   <h2>Leaflet 1.6.1</h2>
   <ol>
@@ -38,6 +38,11 @@
     <li><a href="maps/OpenLayers/OpenLayerEx5.html">Example 5</a></li>
     <li><a href="maps/OpenLayers/OpenLayerEx6.html">Example 6</a></li>
   </ol>
+
+  <footer>
+    <p><a href="https://github.com/congo-basin-institute/cbi-web-maps">Code available on GitHub</a>
+    </p>
+  </footer>
 
 </body>
 
