--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <li><a href="maps/leaflet/example1.html">Example 1, CDN host, OSM</a></li>
     <li><a href="maps/leaflet/example2.html">Example 2, local host, OSM</a></li>
     <li><a href="maps/leaflet/example3.html">Example 3, local host, Mapbox</a></li>
+    <li><a href="maps/leaflet/example4.html">Example 4, local host, Mapbox satellite view</a></li>
   </ol>
 
   <h2>Open Layers v6.1.1</h2>
