--- a/maps/leaflet/example4.html
+++ b/maps/leaflet/example4.html
@@ -38,10 +38,10 @@
     var marker = L.marker([11.51120, 3.89827]).addTo(map)
     marker.bindPopup("<b>Hello world!</b><br>I am at CBI Bastos").openPopup();
 
-    L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+    L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1Ijoic2NvdHRncnViZXIiLCJhIjoiY2szamxneDFiMGthZjNmbzM0MnM3emZrdCJ9.3h2KVTJgD22j3mIBZx7xMA', {
       attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
       maxZoom: 18,
-      id: 'mapbox/satellite-v9,',
+      id: 'mapbox/satellite-v9',
       accessToken: 'pk.eyJ1Ijoic2NvdHRncnViZXIiLCJhIjoiY2szamxneDFiMGthZjNmbzM0MnM3emZrdCJ9.3h2KVTJgD22j3mIBZx7xMA'
     }).addTo(map);
 
