--- a/index.html
+++ b/index.html
@@ -15,21 +15,28 @@
 <body>
   <h1>CBI Web Maps</h1>
 
+  <h2>Mapbox 1.5.0</h2>
+  <ol>
+    <li><a href="maps/mapbox/mapbox-ex1.html">Example 1, CDN host, mapbox/satellite-v9</a></li>
+
+  </ol>
+
   <h2>Leaflet 1.6.1</h2>
   <ol>
-    <li><a href="maps/leaflet/example1.html">Example 1, CDN host, OSM</a></li>
-    <li><a href="maps/leaflet/example2.html">Example 2, local host, OSM</a></li>
-    <li><a href="maps/leaflet/example3.html">Example 3, local host, Mapbox</a></li>
-    <li><a href="maps/leaflet/example4.html">Example 4, local host, Mapbox satellite view</a></li>
+    <li><a href="maps/leaflet/leaflet-ex1.html">Example 1, CDN host, OSM</a></li>
+    <li><a href="maps/leaflet/leaflet-ex2.html">Example 2, local host, OSM</a></li>
+    <li><a href="maps/leaflet/leaflet-ex3.html">Example 3, local host, Mapbox</a></li>
+    <li><a href="maps/leaflet/leaflet-ex2.html">Example 4, local host, Mapbox satellite view</a>
+    </li>
   </ol>
 
   <h2>Open Layers v6.1.1</h2>
   <ol>
-    <li><a href="maps/ol/example1.html">Example 1, CDN host</a></li>
-    <li><a href="maps/ol/example2.html">Example 2, local host</a></li>
+    <li><a href="maps/ol/ol-ex1.html">Example 1, CDN host</a></li>
+    <li><a href="maps/ol/ol-ex1.html">Example 2, local host</a></li>
   </ol>
 
-  <h2>OpenLayers v.2.13.1 (deprecated)</h2>
+  <h2>OpenLayers v.2.13.1 (deprecated version of OpenLayers)</h2>
 
   <ol>
     <li><a href="maps/OpenLayers/OpenLayerEx1.html">Example 1</a></li>
