add mapbox switchable styles feature

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
   <h2>Mapbox 1.5.0</h2>
   <ol>
-    <li><a href="maps/mapbox/mapbox-ex1.html">Example 1, CDN host, mapbox/satellite-v9</a></li>
+    <li><a href="maps/mapbox/mapbox-ex1.html">Example 1, CDN host, style: mapbox/satellite-v9</a>
+    </li>
+    <li><a href="maps/mapbox/mapbox-ex2.html">Example 1, CDN host, change styles</a></li>
 
   </ol>
 
