add stylesheet to maps

--- a/maps/mapbox/mapbox-ex2.html
+++ b/maps/mapbox/mapbox-ex2.html
@@ -5,6 +5,8 @@
   <meta charset='utf-8' />
   <title>Change a map's style</title>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+  <link rel="stylesheet" href="../../css/styles.css">
+
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.js'></script>
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.css' rel='stylesheet' />
   <style>
@@ -14,10 +16,8 @@
     }
 
     #map {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      width: 100%;
+      height: 100vh;
+      width: 100vw;
     }
 
     ;
