--- a/maps/ol/ol-ex1.html
+++ b/maps/ol/ol-ex1.html
@@ -2,9 +2,15 @@
 <html lang="en">
 
 <head>
+
+  <title>OpenLayers v6.1.1 example</title>
+
+  <link rel="stylesheet" href="../../css/styles.css">
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/css/ol.css"
     type="text/css">
+
+
   <style>
     .map {
       height: 100vh;
@@ -12,8 +18,6 @@
     }
 
   </style>
-
-  <title>OpenLayers v6.1.1 example</title>
 </head>
 
 <body>
