--- a/maps/leaflet/leaflet-ex4.html
+++ b/maps/leaflet/leaflet-ex4.html
@@ -40,7 +40,7 @@
       attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
         '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
         'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-      id: 'mapbox/streets-v11'
+      id: 'mapbox/satellite-v9'
     }).addTo(mymap);
 
 
