--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <h2>Mapbox 1.5.0</h2>
     <ol>
       <li><a href="maps/mapbox/mapbox-ex1.html">Example 1, CDN host, style:
-          mapbox/satellite-v9</a>
+          satellite</a>
       </li>
-      <li><a href="maps/mapbox/mapbox-ex2.html">Example 1, CDN host, change styles</a></li>
+      <li><a href="maps/mapbox/mapbox-ex2.html">Example 2, CDN host, change styles</a></li>
 
     </ol>
 
@@ -58,7 +58,7 @@
       <li><a href="maps/leaflet/leaflet-ex1.html">Example 1, CDN host, OSM</a></li>
       <li><a href="maps/leaflet/leaflet-ex2.html">Example 2, local host, OSM</a></li>
       <li><a href="maps/leaflet/leaflet-ex3.html">Example 3, local host, Mapbox</a></li>
-      <li><a href="maps/leaflet/leaflet-ex2.html">Example 4, local host, Mapbox satellite view</a>
+      <li><a href="maps/leaflet/leaflet-ex4.html">Example 4, local host, Mapbox satellite view</a>
       </li>
     </ol>
 
