Display buildings in 3D map

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           satellite</a>
       </li>
       <li><a href="maps/mapbox/mapbox-ex2.html">Example 2, CDN host, change styles</a></li>
+      <li><a href="maps/mapbox/mapbox-ex3.html">Example 3, Display buildings in 3D</a></li>
 
     </ol>
 
